--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
         <div class="bg-dark p-4">
           <h5 class="text-body-emphasis h4"><i class='bx bxl-unity'></i> Web-Minz</h5>
-          <span class="text-body-secondary">Sebuah Halaman Kecil Untuk Media Sosial.</span>
+          <span class="text-body-secondary">Sorry, This Page Not Perfect ^^</span>
         </div>
       </div>
       <nav class="navbar navbar-dark mb-5">
@@ -34,7 +34,7 @@
                     <a href="https://www.tiktok.com/@fhmixhoiri._?" class="tombol tombol-tk shadow-lg m-3"><i class='bx bxl-tiktok'></i> Tik-tok</a>
                     <a href="https://discord.com/invite/X8kJQnAB" class="tombol tombol-dis shadow-lg m-3"><i class='bx bxl-discord-alt'></i> Discord</a>
                     <a href="https://github.com/WebMinzz" class="tombol tombol-git shadow-lg m-3"><i class='bx bxl-github'></i> GitHub</a>
-                    <button class="tombol tombol-mail shadow-lg m-3" disabled><i class='bx bxl-gmail'></i> Mail</button>
+                    <a href="https://mail.google.com/mail/u/0/?tab=mm&pli=1#inbox?compose=CllgCJqWgvkSwBbVtjpnLlRnScGQtSKHBKzwXKkGgBLTlsLhmZBtHVPMmtKbCljqbGxdbGzxZDq" class="tombol tombol-gm shadow-lg m-3"><i class='bx bxl-gmail'></i> Gmail</a>
                 </div>
             </div>
         </div>
