--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
             <div class="col">
                 <div class="card">
                     <a href="https://www.instagram.com/fhmkhrii_/?" class="tombol tombol-ig shadow-lg m-3"><i class='bx bxl-instagram'></i> Instagram</a>
+                    <a href="https://open.spotify.com/user/31sraumlwmb6gwpxted6c3ucy76i?si=O9YNjhh_Rj6bo6kKLJhxAA" class="tombol tombol-spt shadow-lg m-3"><i class='bx bxl-spotify'></i> Spotify</a>
                     <button onclick="redirectToWhatsApp()" class="tombol tombol-wa shadow-lg m-3"><i class='bx bxl-whatsapp'></i> Whatsapp <i class='bx bxs-lock'></i></button>
                     <a href="https://www.tiktok.com/@fhmixhoiri._?" class="tombol tombol-tk shadow-lg m-3"><i class='bx bxl-tiktok'></i> Tik-tok</a>
                     <a href="https://discord.com/invite/X8kJQnAB" class="tombol tombol-dis shadow-lg m-3"><i class='bx bxl-discord-alt'></i> Discord</a>
                     <a href="https://github.com/WebMinzz" class="tombol tombol-git shadow-lg m-3"><i class='bx bxl-github'></i> GitHub</a>
-                    <a href="https://mail.google.com/mail/u/0/?tab=mm&pli=1#inbox?compose=CllgCJqWgvkSwBbVtjpnLlRnScGQtSKHBKzwXKkGgBLTlsLhmZBtHVPMmtKbCljqbGxdbGzxZDq" class="tombol tombol-gm shadow-lg m-3"><i class='bx bxl-gmail'></i> Gmail</a>
+                    <button href="#" class="tombol tombol-gm shadow-lg m-3" disabled><i class='bx bxl-gmail'></i> Gmail</button>
                 </div>
             </div>
         </div>
