--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="asset/css/bootstrap.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>WebMinzz</title>
 </head>
-<body>
+<body style="background-color: #8134af;">
 
     <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
         <div class="bg-dark p-4">
           <h5 class="text-body-emphasis h4"><i class='bx bxl-unity'></i> Web-Minz</h5>
-          <span class="text-body-secondary">Sorry, This Page Not Perfect ^^</span>
+          <span class="text-body-secondary">Halaman ini adalah aplikasi sosial media punya MINZ</span>
         </div>
       </div>
       <nav class="navbar navbar-dark mb-5">
@@ -21,21 +24,22 @@
           <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class='bx bx-sort-down'></i>
           </button>
-          <h2 class="navbar-brand" style="color: black;"><i class='bx bxl-unity'></i> Web-Minz</h2>
+          <h2 class="navbar-brand" style="color: #fffb29;"><i class='bx bxl-unity'></i> Web-Minz</h2>
         </div>
       </nav>
 
       <div class="container">
         <div class="row">
             <div class="col">
-                <div class="card">
+                <div class="card border-dark"  style="background-color: #fffb29;">
                     <a href="https://www.instagram.com/fhmkhrii_/?" class="tombol tombol-ig shadow-lg m-3"><i class='bx bxl-instagram'></i> Instagram</a>
                     <a href="https://open.spotify.com/user/31sraumlwmb6gwpxted6c3ucy76i?si=O9YNjhh_Rj6bo6kKLJhxAA" class="tombol tombol-spt shadow-lg m-3"><i class='bx bxl-spotify'></i> Spotify</a>
-                    <button onclick="redirectToWhatsApp()" class="tombol tombol-wa shadow-lg m-3"><i class='bx bxl-whatsapp'></i> Whatsapp <i class='bx bxs-lock'></i></button>
                     <a href="https://www.tiktok.com/@fhmixhoiri._?" class="tombol tombol-tk shadow-lg m-3"><i class='bx bxl-tiktok'></i> Tik-tok</a>
                     <a href="https://discord.com/invite/X8kJQnAB" class="tombol tombol-dis shadow-lg m-3"><i class='bx bxl-discord-alt'></i> Discord</a>
                     <a href="https://github.com/WebMinzz" class="tombol tombol-git shadow-lg m-3"><i class='bx bxl-github'></i> GitHub</a>
-                    <button href="#" class="tombol tombol-gm shadow-lg m-3" disabled><i class='bx bxl-gmail'></i> Gmail</button>
+                    <a href="https://www.facebook.com/fhmiikh" class="tombol tombol-fb shadow-lg m-3"><i class='bx bxl-facebook'></i> Facebook</a>
+                    <a href="https://www.youtube.com/@Fhm1411/" class="tombol tombol-yt shadow-lg m-3" disabled><i class='bx bxl-youtube'></i> Youtube</a>
+                    <button onclick="redirectToWhatsApp()" class="tombol tombol-wa shadow-lg m-3"><i class='bx bxl-whatsapp'></i> Whatsapp <i class='bx bxs-lock'></i></button>
                 </div>
             </div>
         </div>
@@ -44,7 +48,7 @@
 
 
       <hr>
-      <p class="text-center"><i>Dibuat Oleh @Minz 2024.</i></p>
+      <p class="text-center">Copyright © Minz 2024.</p>
 
 
     <script src="main.js"></script>
