--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-dark mb-5">
         <div class="container-fluid">
           <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class='bx bx-sort-down'></i>
+            <i class='bx bx-menu'></i>
           </button>
           <h2 class="navbar-brand" style="color: #fffb29;"><i class='bx bxl-unity'></i> Web-Minz</h2>
         </div>
@@ -32,6 +32,11 @@
         <div class="row">
             <div class="col">
                 <div class="card border-dark"  style="background-color: #fffb29;">
+                  <div class="prof">
+                    <img src="asset/img/IMG_20240318_164910_270.jpg" alt="" class="rounded-circle" style="width: 100px;">
+                    <h1>fhmkhrii_</h1>
+                    <hr>
+                  </div>
                     <a href="https://www.instagram.com/fhmkhrii_/?" class="tombol tombol-ig shadow-lg m-3"><i class='bx bxl-instagram'></i> Instagram</a>
                     <a href="https://open.spotify.com/user/31sraumlwmb6gwpxted6c3ucy76i?si=O9YNjhh_Rj6bo6kKLJhxAA" class="tombol tombol-spt shadow-lg m-3"><i class='bx bxl-spotify'></i> Spotify</a>
                     <a href="https://www.tiktok.com/@fhmixhoiri._?" class="tombol tombol-tk shadow-lg m-3"><i class='bx bxl-tiktok'></i> Tik-tok</a>
