--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
         <div class="bg-dark p-4">
           <h5 class="text-body-emphasis h4"><i class='bx bxl-unity'></i> Web-Minz</h5>
-          <span class="text-body-secondary">Halaman ini adalah aplikasi sosial media punya MINZ</span>
+          <span class="text-body-secondary">Halaman ini adalah sosial media punya fahmi.</span>
           <hr>
           <h5 class="text-body-emphasis">Lainnya</h5>
           <button class="btn btn-outline-primary" onclick="notReady()">Home</button >
-          <a class="btn btn-outline-primary" href="kalkulator.html">Kalkulator</a>
         </div>
       </div>
       <nav class="navbar navbar-dark mb-5">
